# rqt_udp_bridge

./: CMakeLists.txt  package.xml  plugin.xml
include/rqt_udp_bridge/: bridge_node.h  udp_bridge_plugin.h
src/: add_remote_dialog.ui  bridge_node.cpp  subscribe_dialog.ui  udp_bridge_plugin.cpp  udp_bridge_plugin.ui
